Fixed bug with gap for non-stop-tickets

--- a/src/app/components/non-stop-tickets/non-stop-tickets.component.scss
+++ b/src/app/components/non-stop-tickets/non-stop-tickets.component.scss
@@ -192,3 +192,10 @@ h1 {
     overflow: hidden;
   }
 }
+
+.non-stop-tickets-data {
+  margin-bottom: 50px;
+  @media only screen and (max-width: 1092px) {
+    margin-bottom: 0px;
+  }
+}
