--- a/src/app/components/search/search.component.scss
+++ b/src/app/components/search/search.component.scss
@@ -99,8 +99,8 @@
     padding: 30px 15px 0 15px;
   }
 }
-.sidebarWrapper {
-  display: flex;
-  flex-direction: column;
-  gap: 50px;
-}
+// .sidebarWrapper {
+//   display: flex;
+//   flex-direction: column;
+//   gap: 50px;
+// }
